--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ html {
   width: 80%;
   border-radius: 20px;
   max-width: 500px;
+  transition: 0.5s;
   /* scrollling snap events to different points */
   scroll-snap-type: y mandatory;
 
@@ -30,3 +31,13 @@ html {
   -ms-overlfow-style: none; 
   scrollbar-width: none;
 }
+
+@media screen and (max-width: 700px) {
+  .app {
+    
+  }
+  .app__videos {
+    height: 600px;
+    width: 70%;
+  }
+} 
