--- a/src/VideoFooter.css
+++ b/src/VideoFooter.css
@@ -2,7 +2,7 @@
   /* relative basicly all the rules are just gonna apply within that parent container */
   position: relative;
   color: black;
-  bottom: 150px;
+  bottom: 180px;
   margin-left: 40px;
   color: white;
   /* background-color: white; */
@@ -14,6 +14,7 @@
 }
 .videoFooter__text > p {
   padding-bottom: 20px;
+  width: 380px;
 }
 .videoFooter__record {
   animation: spinTheRecord infinite 5s linear;
@@ -43,5 +44,13 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media screen and (max-width: 700px) {
+  .videoFooter {
+    bottom: 200px;
+  }
+  .videoFooter__text > p {
+    width: 300px;
   }
 }
