--- a/src/Video.css
+++ b/src/Video.css
@@ -6,9 +6,15 @@
   height: 100%;
   /* scrollling snap events to different points */
   scroll-snap-align: start;
+  padding: 0px;
+  margin: 0;
+  border: none;
 }
 .video__player {
   object-fit: fill;
   width: 100%;
   height: 100%;
+  padding: 0px;
+  margin: 0;
+  border: none;
 }
