--- a/src/VideoSidebar.css
+++ b/src/VideoSidebar.css
@@ -10,6 +10,11 @@
 }
 @media screen and (max-width: 700px) {
   .videoSidebar {
-    top: 20%;
+    top: 30%;
+  }
+}
+@media screen and (max-width: 300px) {
+  .videoSidebar {
+    top: 80%;
   }
 }
